# PSkrit

./: .gitignore  README.md  pyproject.toml  skrit.py
.github/workflows/: pylint.yml
src/Skrit_r0073rr0r/: skrit.py
src/Skrit_r0073rr0r.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/skrit_r0073rr0r/: litrovacki.py  satrovacki.py  skrit.py  utrovacki.py
src/skrit_r0073rr0r.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_starovacki.py
